--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.6.3",
-    "recharts": "^3.1.0",
     "@supabase/supabase-js": "^2.55.0",
     "leaflet": "^1.9.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-router": "^7.6.3",
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.1.0",
     "supabase": "^2.34.3"
   },
   "devDependencies": {
